tests/files/type_checker_tests/should_fail/136.cmdr
//Should fail if constant variable is set again
const x = 3;
const x = 4;
